--- a/index.html
+++ b/index.html
@@ -1,1 +1,228 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RSSchool CV</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+</head>
+<body>
+    <div class="cover">
+		<header class="header">
+			<div class="column">
+				<figure class="header__avatar">
+					<img src="assets/img/Image.jpg" class="header__picture" alt="Header avatar">
+				</figure>
+			</div>
+			<div class="column column_main column_header">
+				<h1 class="header__title">Zhansaya<span class="header__title header__title_span">Markabaeva/span></h1>
+			</div>
+		</header>
+		<main class="main">
+			<div class="column">
+				<section class="section" id="contacts">
+					<h2 class="section-title">Contacts</h2>
+					<ul class="contacts__cover">
+                                                <li class="contacts__block">
+							<div class="contacts__image contacts__image_location"></div>
+							<div class="contacts__text">
+								<p class="contacts__paragraph">Tashkent, Uzbekistan</p>
+							</div>
+						</li>
+						<li class="contacts__block">
+							<div class="contacts__image contacts__image_github"></div>
+							<div class="contacts__text">
+								<a href="https://github.com/ZhansayaAybek" target="_blank" class="contacts__link">ZhansayaAybek</a>
+							</div>
+						</li>
+						<li class="contacts__block">
+							<div class="contacts__image contacts__image_telegram"></div>
+							<div class="contacts__text">
+								<a href="https://t.me/zhansaya_markabaeva" target="_blank" class="contacts__link">Zhansaya</a>
+							</div>
+						</li>
+						<li class="contacts__block">
+							<div class="contacts__image contacts__image_email"></div>
+							<div class="contacts__text">
+								<a href="mailto:kalimbetovazansaa@gmai.com" class="contacts__link">kalimbetovazansaa@gmai.com</a>
+							</div>
+						</li>
+					</ul>
+				</section>
+				<section class="section" id="skills">
+					<h2 class="section-title">Skills</h2>
+					<ul class="skills__cover">
+						<li class="skills__block">
+							<p class="skills__text">Git</p>
+							<ul class="skills-list">
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
+							</ul>
+						</li>
+						<li class="skills__block">
+							<p class="skills__text">HTML</p>
+							<ul class="skills-list">
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
+							</ul>
+						</li>
+						<li class="skills__block">
+							<p class="skills__text">CSS</p>
+							<ul class="skills-list">
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+		            <li class="skills-list__item"></li> 
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
+							</ul>
+						</li>
+						<li class="skills__block">
+							<p class="skills__text">C++</p>
+							<ul class="skills-list">
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
+							</ul>
+						</li>
+						<li class="skills__block">
+							<p class="skills__text">JS Basics</p>
+							<ul class="skills-list">
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
+							</ul>
+						</li>
+					</ul>				
+				</section>
+                <section class="section" id="education">
+					<h2 class="section-title">Education</h2>
+					<div class="education__block">
+						<div class="section-university">TUIT</div>
+						<p class="education__text">Economics and management in the sphere of ICT</p>
+					</div>
+					<div class="education__block">
+						<div class="section-school">RS School</div>
+						<p class="education__text">JS/Frontend. Stage 1</p>
+					</div>
+				</section>
+				<section class="section" id="languages">
+					<h2 class="section-title">Languages</h2>
+					<ul class="languages__list">
+						<li class="languages__item">Kazakh (Native)</li>
+						<li class="languages__item">Russian (Fluent)</li>
+            <li class="languages__item">English (B2)</li>
+					</ul>
+				</section>
+			</div>	
+			<div class="column column_main">
+				<section class="section" id="summary">
+					<h2 class="section-title">About myself</h2>
+					<div class="divider_orange"></div>
+					<p class="summary__text">
+      I am 18 year-old sophomore. I am eager to learn, enjoy overcoming challenges, and I have a genuine interest in Web Development. My career goal is to gain a role which allows me to further my expertise and take on increased responsibility at an IT company.
+					</p>
+				</section>
+				<section class="section" id="key">
+					<h2 class="section-title">Key strengths</h2>
+					<div class="divider_orange"></div>
+					<ul class="key__list">
+            <li class="key__item">Hardworking</li>
+						<li class="key__item">Responsible</li>
+            <li class="key__item">Enthusiastic</li>
+					</ul>
+				</section>
+                     <section class="section" id="code">
+                    <h2 class="section-title">Code example</h2>
+                    <div class="divider_orange"></div>
+                    <pre>
+                        <code>
+#include <iostream>
+using namespace std;
 
+void cycleSort(int arr[], int n)
+{
+
+	int writes = 0;
+
+	for (int cycle_start = 0; cycle_start <= n - 2; cycle_start++) {
+	
+		int item = arr[cycle_start];
+
+		int pos = cycle_start;
+		for (int i = cycle_start + 1; i < n; i++)
+			if (arr[i] < item)
+				pos++;
+
+		if (pos == cycle_start)
+			continue;
+
+		while (item == arr[pos])
+			pos += 1;
+
+		if (pos != cycle_start) {
+			swap(item, arr[pos]);
+			writes++;
+		}
+
+		while (pos != cycle_start) {
+			pos = cycle_start;
+
+			for (int i = cycle_start + 1; i < n; i++)
+				if (arr[i] < item)
+					pos += 1;
+
+			while (item == arr[pos])
+				pos += 1;
+
+			if (item != arr[pos]) {
+				swap(item, arr[pos]);
+				writes++;
+			}
+		}
+	}
+}
+
+int main()
+{
+	int arr[] = { 1, 8, 3, 9, 10, 10, 2, 4 };
+	int n = sizeof(arr) / sizeof(arr[0]);
+	cycleSort(arr, n);
+
+	cout << "After sort : " << endl;
+	for (int i = 0; i < n; i++)
+		cout << arr[i] << " ";
+	return 0;
+}
+ 
+                        </code>
+                     </pre>
+		 </section>
+	<section class="section" id="project">
+        <h2 class="section-title">Project</h2>
+        <div class="divider_orange"></div>
+	<a href="https://ZhansayaAybek.github.io/rsschool-cv/" class="project__link">My CV</a>
+	</section>
+		 </div>
+		</main>
+        <footer class="footer">
+			<div class="footer__inner">
+				<div class="footer__block">
+					<div class="footer__text">Created in <a href="https://rs.school/js/" class="footer__link"><img src="assets/svg/logo_rs.svg.svg" class="footer__image" alt=""></a>course in 2022</div>
+				</div>				
+			</div>
+		</footer>
+	</div>
+</body>
+</html>
