feat:update index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</figure>
 			</div>
 			<div class="column column_main column_header">
-				<h1 class="header__title">Zhansaya<span class="header__title header__title_span">Markabaeva/span></h1>
+				<h1 class="header__title">Zhansaya<span class="header__title header__title_span">Markabaeva</span></h1>
 			</div>
 		</header>
 		<main class="main">
@@ -128,14 +128,14 @@
 			</div>	
 			<div class="column column_main">
 				<section class="section" id="summary">
-					<h2 class="section-title">About myself</h2>
+					<h2 class="section-title">About Myself</h2>
 					<div class="divider_orange"></div>
 					<p class="summary__text">
       I am 18 year-old sophomore. I am eager to learn, enjoy overcoming challenges, and I have a genuine interest in Web Development. My career goal is to gain a role which allows me to further my expertise and take on increased responsibility at an IT company.
 					</p>
 				</section>
 				<section class="section" id="key">
-					<h2 class="section-title">Key strengths</h2>
+					<h2 class="section-title">Key Strengths</h2>
 					<div class="divider_orange"></div>
 					<ul class="key__list">
             <li class="key__item">Hardworking</li>
@@ -144,68 +144,66 @@
 					</ul>
 				</section>
                      <section class="section" id="code">
-                    <h2 class="section-title">Code example</h2>
+                    <h2 class="section-title">Code Example</h2>
                     <div class="divider_orange"></div>
                     <pre>
                         <code>
-#include <iostream>
-using namespace std;
+                        #include <iostream>
+                        using namespace std;
 
-void cycleSort(int arr[], int n)
-{
+                        void cycleSort(int arr[], int n) {
 
-	int writes = 0;
+	                int writes = 0;
 
-	for (int cycle_start = 0; cycle_start <= n - 2; cycle_start++) {
+	                for (int cycle_start = 0; cycle_start <= n - 2; cycle_start++) {
 	
-		int item = arr[cycle_start];
+		                  int item = arr[cycle_start];
 
-		int pos = cycle_start;
-		for (int i = cycle_start + 1; i < n; i++)
-			if (arr[i] < item)
-				pos++;
+		                  int pos = cycle_start;
+		                  for (int i = cycle_start + 1; i < n; i++)
+			          if (arr[i] < item)
+				      pos++;
 
-		if (pos == cycle_start)
-			continue;
+		                  if (pos == cycle_start)
+			             continue;
 
-		while (item == arr[pos])
-			pos += 1;
+		                  while (item == arr[pos])
+			                 pos += 1;
 
-		if (pos != cycle_start) {
-			swap(item, arr[pos]);
-			writes++;
-		}
+		                  if (pos != cycle_start){
+			                  swap(item, arr[pos]);
+			                  writes++;
+		                  }
 
-		while (pos != cycle_start) {
-			pos = cycle_start;
-
-			for (int i = cycle_start + 1; i < n; i++)
-				if (arr[i] < item)
-					pos += 1;
-
-			while (item == arr[pos])
-				pos += 1;
-
-			if (item != arr[pos]) {
-				swap(item, arr[pos]);
-				writes++;
-			}
-		}
-	}
-}
-
-int main()
-{
-	int arr[] = { 1, 8, 3, 9, 10, 10, 2, 4 };
-	int n = sizeof(arr) / sizeof(arr[0]);
-	cycleSort(arr, n);
-
-	cout << "After sort : " << endl;
-	for (int i = 0; i < n; i++)
-		cout << arr[i] << " ";
-	return 0;
-}
+		                  while (pos != cycle_start){
+			                  pos = cycle_start;
  
+			                  for (int i = cycle_start + 1; i < n; i++)
+				                  if (arr[i] < item)
+					          pos += 1;
+
+			                   while (item == arr[pos])
+				                  pos += 1;
+
+			                   if (item != arr[pos]){
+				                  swap(item, arr[pos]);
+				                  writes++;
+			                    }
+		                  }
+	                }
+                        }
+
+                        int main(){
+	                       int arr[] = { 1, 8, 3, 9, 10, 10, 2, 4 };
+	                       int n = sizeof(arr) / sizeof(arr[0]);
+	                       cycleSort(arr, n);
+
+                               cout << "After sort : " << endl;
+	                       for (int i = 0; i < n; i++)
+		                      cout << arr[i] << " ";
+	                       return 0;
+                        }
+                  
                         </code>
                      </pre>
 		 </section>
