--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
                     <h2 class="section-title">Code Example</h2>
                     <pre>
                         <code>
-                            function squareDigits(num)
-                           {
-                             let number = '' + num;
-                             let newNum = new Array();
-                             number.split('').map(n => {
-                             newNum.push(n**2);
-                            })
+                        function squareDigits(num)
+                        {
+                           let number = '' + num;
+                           let newNum = new Array();
+                           number.split('').map(n => {
+                           newNum.push(n**2);
+                        })
   
-                           return parseInt(newNum.join(''));
-                           return 0;
+                        return parseInt(newNum.join(''));
+                        return 0;
                         </code>
                      </pre>
 		 </section>
@@ -167,7 +167,7 @@
         <footer class="footer">
 			<div class="footer__inner">
 				<div class="footer__block">
-					<div class="footer__text">Created in <a href="https://rs.school/js/" class="footer__link"><img src="assets/svg/logo_rs.svg.svg" class="footer__image" alt=""></a>course in 2022</div>
+					<div class="footer__text">Created in <a href="https://rs.school/js/" class="footer__link"><img src="assets/svg/logo_rs.svg.svg" class="footer__image" alt=""></a>course in October 2022</div>
 				</div>				
 			</div>
 		</footer>
