feat: add github link

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
         <footer class="footer">
 			<div class="footer__inner">
 				<div class="footer__block">
+					<a href="https://github.com/ZhansayaAybek" class="footer__link"><img src="assets/svg/github.svg.svg" class="footer__image" alt=""></a>
+				</div>
+				<div class="footer__block">
 					<div class="footer__text">Created in <a href="https://rs.school/js/" class="footer__link"><img src="assets/svg/logo_rs.svg.svg" class="footer__image" alt=""></a>course in October 2022</div>
 				</div>				
 			</div>
