--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RSSchool CV</title>
+    <title>CV</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
@@ -29,12 +29,6 @@
 							<div class="contacts__image contacts__image_location"></div>
 							<div class="contacts__text">
 								<p class="contacts__paragraph">Tashkent, Uzbekistan</p>
-							</div>
-						</li>
-						<li class="contacts__block">
-							<div class="contacts__image contacts__image_github"></div>
-							<div class="contacts__text">
-								<a href="https://github.com/ZhansayaAybek" target="_blank" class="contacts__link">ZhansayaAybek</a>
 							</div>
 						</li>
 						<li class="contacts__block">
@@ -79,8 +73,8 @@
 							<ul class="skills-list">
 								<li class="skills-list__item"></li>
 								<li class="skills-list__item"></li>
-		            <li class="skills-list__item"></li> 
 								<li class="skills-list__item"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
 								<li class="skills-list__item skills-list__item_gray"></li>
 							</ul>
 						</li>
@@ -100,7 +94,7 @@
 								<li class="skills-list__item"></li>
 								<li class="skills-list__item"></li>
 								<li class="skills-list__item"></li>
-								<li class="skills-list__item"></li>
+								<li class="skills-list__item skills-list__item_gray"></li>
 								<li class="skills-list__item skills-list__item_gray"></li>
 							</ul>
 						</li>
@@ -111,10 +105,6 @@
 					<div class="education__block">
 						<div class="section-university">TUIT</div>
 						<p class="education__text">Economics and management in the sphere of ICT</p>
-					</div>
-					<div class="education__block">
-						<div class="section-school">RS School</div>
-						<p class="education__text">JS/Frontend. Stage 1</p>
 					</div>
 				</section>
 				<section class="section" id="languages">
@@ -142,19 +132,21 @@
 					</ul>
 				</section>
                      <section class="section" id="code">
-                    <h2 class="section-title">Code Example</h2>
+                    <h2 class="section-title">Code Example (JS)</h2>
+			     <p style="font-size: 20px;"> <b> Codewars </b> <p>
+                       <p style="font-size: 18px;"> <b>7kuy</b> Greatest common divisor.
+
                     <pre>
                         <code>
-                        function squareDigits(num)
-                        {
-                           let number = '' + num;
-                           let newNum = new Array();
-                           number.split('').map(n => {
-                           newNum.push(n**2);
-                        })
-  
-                        return parseInt(newNum.join(''));
-                        return 0;
+                        function mygcd(x,y){
+                          let temp;
+                          while(y) {
+                            temp = y;
+                            y = x % y;
+                            x = temp;
+                          }
+                          return x;
+                        }
                         </code>
                      </pre>
 		 </section>
@@ -167,10 +159,7 @@
         <footer class="footer">
 			<div class="footer__inner">
 				<div class="footer__block">
-					<a href="https://github.com/ZhansayaAybek" class="footer__link"><img src="assets/svg/github.svg.svg" class="footer__image" alt=""></a>
-				</div>
-				<div class="footer__block">
-					<div class="footer__text">Created in <a href="https://rs.school/js/" class="footer__link"><img src="assets/svg/logo_rs.svg.svg" class="footer__image" alt=""></a>course in October 2022</div>
+					<div class="footer__text">Visit my GitHub<a href="https://github.com/ZhansayaAybek" class="footer__link"><img src="assets/svg/github.svg.svg" class="footer__image" alt=""></a>
 				</div>				
 			</div>
 		</footer>
